manifests/utilities/photoprism/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  labels:
    app: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - image: registry.homelab.dsb.dev/photoprism/photoprism-arm64:20210120
          name: photoprism
          readinessProbe:
            tcpSocket:
              port: 2342
          resources:
            limits:
              memory: 4Gi
          volumeMounts:
            - mountPath: /photoprism/storage
              name: photoprism
              subPath: storage
            - mountPath: /photoprism/originals
              name: photoprism
              subPath: originals
      volumes:
        - name: photoprism
          persistentVolumeClaim:
            claimName: photoprism
