manifests/utilities/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  selector:
    app: photoprism
  ports:
  - protocol: TCP
    name: http
    port: 2342
